fix: text alignment

--- a/src/features/home/main/folder/file-item/FileItem.css
+++ b/src/features/home/main/folder/file-item/FileItem.css
@@ -11,4 +11,5 @@ p.file-title {
   overflow: hidden;
   text-overflow: ellipsis;
   width: 10rem;
+  text-align: center;
 }
