--- a/src/features/home/main/folder/folder-item/FolderItem.css
+++ b/src/features/home/main/folder/folder-item/FolderItem.css
@@ -12,4 +12,5 @@ p.folder-title {
   overflow: hidden;
   text-overflow: ellipsis;
   width: 10rem;
+  text-align: center;
 }
